fix: Sidebar titles not visible in v2.6.2 (currently in alpha).

--- a/src/scss/components/_components.sidebar.scss
+++ b/src/scss/components/_components.sidebar.scss
@@ -101,6 +101,7 @@
         overflow: hidden;
         text-overflow: ellipsis;
         flex: 1;
+        line-height: 1 !important;
       }
 
       .note-count-label {
